html et css de la deuxième page

--- a/about.html
+++ b/about.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>breif 2</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <header>
         <nav class="navbar">
@@ -13,13 +15,123 @@
                 <a href="index.html">Hello Web</a>
             </div>
             <ul class="nav-links">
-                <li><a href="index.html" >Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="about.html" class="active">About us</a></li>
                 <li><a href="service.html">Services</a></li>
                 <li><a href="contact.html" class="contact-button">Contact us</a></li>
             </ul>
         </nav>
     </header>
-    
+    <main>
+        <section class="section1AB">
+            <div class="titlee">
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                     Lorem Ipsum has been the industry'sLorem Ipsum is simply dummy text of the printing and typesetting industry.
+                      Lorem Ipsum has been the industry's
+                </p>
+            </div>
+            <div class="section1AB-buttons">
+                <a href="#" class="section1AB-btn">See More</a>
+            </div>
+        </section>
+        <section class="section2AB">
+            <div class="lkhdama">
+                <div class="khdam1">
+                    <img src="./assets/images/lkhdama.jpg" alt="lkhdam lwel">
+                    <h4>Daniel H. Pink</h4>
+                    <p class="PKH1">American writer</p>
+                    <p class="PKH2">2 hour 58 minutes</p>
+                </div>
+                <div class="khdam2">
+                    <img src="./assets/images/lkhdama.jpg" alt="lkhdam tani">
+                    <h4>Paul Krugman</h4>
+                    <p class="PKH1">American economis</p>
+                    <p class="PKH2">2 hour 58 minutes</p>
+                </div>
+                <div class="khdam3">
+                    <img src="./assets/images/lkhdama.jpg" alt="lkhdam talt">
+                    <h4>Daniel H. Pink</h4>
+                    <p class="PKH1">American writer</p>
+                    <p class="PKH2">2 hour 58 minutes</p>
+                </div>
+                <div class="khdam4">
+                    <img src="./assets/images/lkhdama.jpg" alt="lkhdam rab3">
+                    <h4>Paul Krugman</h4>
+                    <p class="PKH1">American writer</p>
+                    <p class="PKH2">2 hour 58 minutes</p>
+                </div>
+            </div>
+            <div class="dwarat">
+                <img src="./assets/images/cercle.png" alt="cercle lwel">
+                <img src="./assets/images/cercle.png" alt="cercle tanya">
+                <img src="./assets/images/Gcercle.png" alt="cercle lkl7la">
+                <img src="./assets/images/cercle.png" alt="cercle talta">
+                <img src="./assets/images/cercle.png" alt="cercle rab3a">
+                <img src="./assets/images/cercle.png" alt="cercle lkhamsa">
+                <img src="./assets/images/cercle.png" alt="cercle sadsa">
+            </div>
+        </section>
+        <SECtion class="section3AB">
+            <div class="carte1">
+                <img src="./assets/images/presentation (4).png" alt="">
+                <div class="carte1-DES">
+                    <h5>New Traning Every Months in Different Fields</h5>
+                    <p>Opportunity to add new trainings uploaded every month to your account at no additional cost!</p>
+                </div>
+            </div>
+            <div class="carte2">
+                <img src="./assets/images/presentation (5).png" alt="">
+                <div class="carte2-DEs">
+                    <h5>Live Q&A with All Trainers</h5>
+                    <p>You can ask your questions by participating in the live question and answer activities.</p>
+                </div>
+            </div>
+            <div class="carte3">
+                <img src="./assets/images/presentation (1).png" alt="">
+                <div class="carte3-DES">
+                    <h5>+70 Training</h5>
+                    <p>More than 60 trainings prepared by the “best” in their field!</p>
+                </div>
+            </div>
+        </SECtion>
+    </main>
+    <footer>
+        <div class="footer-header">
+            <div>
+                <h6>LOGO</h6>
+                <p>
+                    Lorem Ipsum is simply dummy text of the printing and typesetting
+                    industry.
+                </p>
+            </div>
+            <div>
+                <h6>About us</h6>
+                <ul>
+                    <li>Lorem</li>
+                    <li>Portfolio</li>
+                    <li>Careers</li>
+                    <li>Contact us</li>
+                </ul>
+            </div>
+            <div>
+                <h6>Contact us</h6>
+                <p class="second-p">
+                    Lorem Ipsum is simply dummy text of the printing and typesetting
+                    industry.
+                </p>
+                <span>+908 89097 890</span>
+            </div>
+            <div class="sm-icons">
+                <span><img src="./assets/images/facebook 1.png" alt="facebook" />
+                </span><span><img src="./assets/images/instagram 1.png"alt="instagram" /></span>
+                <span><img src="./assets/images/twitter 1.png" alt="twitter" /></span>
+                <span><img src="./assets/images/linkedin 1.png" alt="linkedin" /></span>
+            </div>
+        </div>
+        <hr />
+        <div class="footer-footer">
+            Copyright &copy; 2024 PixelCoders All rights Rserved
+        </div>
+    </footer>
 </body>
 </html>
